--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>Home</title>
-    </head>
-    <body>
-        <h1>Coding Events</h1>
-        <nav>
-            <ul>
-                <li><a href="/events">All Events</a></li>
-            </ul>
-        </nav>
-    </body>
+<head th:replace="fragments :: head"></head>
+  <body>
+    <h1>All Events</h1>
+    <nav th:replace="fragments :: navigation"></nav>
+    <p th:unless="${events} and ${events.size}">No events!</p>
+    <ul>
+      <th:block th:each="event : ${events}">
+        <li th:text="${event}"></li>
+      </th:block>
+    </ul>
+  </body>
 </html>
