--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head"></head>
-<body>
-<h1>Coding Events</h1>
-<nav th:replace="fragments :: navigation"></nav>
-</body>
+    <head th:replace="fragments :: head"></head>
+
+    <body class="container">
+
+        <header th:replace="fragments :: header"></header>
+
+    </body>
 </html>
