--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -10,7 +10,10 @@
         <form method="post" action="/events/create">
             <div class="form-group">
                 <label>Name
-                <input type="text" name="eventName" class="form-control">
+                    <input type="text" name="eventName" class="form-control" />
+                </label>
+                <label>Description
+                    <input type="text" name="eventDescription" class="form-control" />
                 </label>
             </div>
             <div class="form-group">
