--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -12,9 +12,13 @@
     <table class="table table-striped">
       <tr>
         <th>Name</th>
+        <th>Description</th>
+        <th>Address</th>
       </tr>
       <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
+        <td th:text="${event.getKey()}"></td>
+        <td th:text="${event.getValue()}"></td>
+        <td th:replace="fragments :: address"></td>
       </tr>
     </table>
 
