--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -12,9 +12,11 @@
     <table class="table table-striped">
       <tr>
         <th>Name</th>
+        <th>Description</th>
       </tr>
       <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
       </tr>
     </table>
 
