--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head"></head>
+<head th:replace="~{fragments :: head}"></head>
     <body class="container">
 
-    <header th:replace="fragments :: header"></header>
-
-    <h1>Create Event</h1>
+    <header th:replace="~{fragments :: header}"></header>
 
         <form method="post" action="/events/create">
             <div class="form-group">
