--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 
     <body class="container">
 
-        <header th:replace="fragments :: header"></header>
+        <header th:replace="~{fragments :: header}"></header>
 
     </body>
 </html>
