--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -10,13 +10,15 @@
     <table class="table table-striped">
       <tr>
         <th>ID</th>
-        <th>Name</th>
+        <th>Event Name</th>
         <th>Description</th>
+        <th>Contact Email</th>
       </tr>
       <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
+        <td th:text="${event.contactEmail}"></td>
       </tr>
     </table>
 
