--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="~{fragments :: head}"></head>
   <body class="container">
 
@@ -14,6 +14,7 @@
         <th>Description</th>
         <th>Contact Email</th>
         <th>Type</th>
+        <th>Edit</th>
       </tr>
       <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
@@ -21,6 +22,7 @@
         <td th:text="${event.description}"></td>
         <td th:text="${event.contactEmail}"></td>
         <td th:text="${event.type.displayName}"></td>
+        <td><a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a></td>
       </tr>
     </table>
 
