--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -22,7 +22,7 @@
         <td th:text="${event.description}"></td>
         <td th:text="${event.contactEmail}"></td>
         <td th:text="${event.type.displayName}"></td>
-        <td><a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a></td>
+        <!-- <td><a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a></td> -->
       </tr>
     </table>
 
