--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -27,14 +27,16 @@
                 <p class="error" th:errors="${event.contactEmail}"></p>
             </div>
             <div class="form-group">
-                <label>Type
-                    <select th:field="${event.type}" class="form-control">
-                        <option th:each="type : ${types}"
-                                th:value="${type}"
-                                th:text="${type.displayName}"
+                <label>Category
+                    <select th:field="${event.eventCategory}" class="form-control">
+                        <option th:each="eventCategory : ${categories}"
+                                th:value="${eventCategory.id}"
+                                th:text="${eventCategory.name}"
                         ></option>
                     </select>
+                    <p class="error" th:errors="${event.eventCategory}"></p>
                 </label>
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Create Event" class="btn btn-success">
