--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -13,7 +13,7 @@
         <th>Event Name</th>
         <th>Description</th>
         <th>Contact Email</th>
-        <th>Type</th>
+        <th>Category</th>
         <th>Edit</th>
       </tr>
       <tr th:each="event : ${events}">
@@ -21,7 +21,7 @@
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
         <td th:text="${event.contactEmail}"></td>
-        <td th:text="${event.type.displayName}"></td>
+        <td th:text="${event.eventCategory.name}"></td>
         <!-- <td><a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a></td> -->
       </tr>
     </table>
