Fixed login, authentication, header navigation, logout

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,13 +12,14 @@
 <nav th:fragment="header">
     <h1 th:text="${title}">Coding Events</h1>
     <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
-        <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
-        <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
-        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
-        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
-        <li class="nav-item"><a class="nav-link" href="/tags">All Tags</a></li>
-        <li class="nav-item"><a class="nav-link" href="/tags/create">Create Tag</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/events">All Events</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/events/create">Create Event</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/events/delete">Delete Event</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/eventCategories">All Categories</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/tags">All Tags</a></li>
+        <li class="nav-item border border-primary rounded"><a class="nav-link" href="/tags/create">Create Tag</a></li>
+        <li class="nav-item border border-danger rounded"><a class="nav-link" href="/logout">Logout</a></li>
     </ul>
 </nav>
 
