--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,5 +23,6 @@
         </div>
         <input type="submit" class="btn btn-primary" value="Register" />
     </form>
+    <p class="bg-warning">Already have an account? <a href="/login">Login</a></p>
 </body>
 </html>
